readme file for project 1

--- a/project 1/Untitled.ipynb
+++ b/project 1/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2e969bfb-9622-459a-a8e5-b4344b20c19b",
    "metadata": {},
    "outputs": [],
@@ -13,8 +13,16 @@
     "import matplotlib.pyplot as plt\n",
     "import plotly as pl\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LinearRegression,"
+    "from sklearn.linear_model import LinearRegression"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "323f896b-2a02-48e0-bee3-3088d940cc91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
